Add spark jobs settings

--- a/app.cfg
+++ b/app.cfg
@@ -9,3 +9,7 @@ client_id = crime-stats-producer
 # Consumer config
 group_id = crime-stats-consumer
 auto_offset_reset = earliest
+
+[spark]
+startingOffsets = earliest
+maxOffsetsPerTrigger = 200
