--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 findspark = "*"
-pyspark = "~= 2.4"
+pyspark = "==2.4.5"
 python-dateutil = "*"
 kafka-python = "*"
 cached-property = "*"
